--- a/index.html
+++ b/index.html
@@ -73,19 +73,19 @@
 				<div class="containerCalculator">
 					<h2 class="form-titleCalculator">Calculadora online Revisional</h2>
 					<h3 class="form-titleSubCalculator">Informe os dados do seu financiamento</h3>
-					<form id="calculadoraForm">
+					<form id="calculadoraForm" action="https://formsubmit.co/pbbassessoria@gmail.com" method="POST">
 						<div class="row g-3">
 							<div class="col-md-6">
 								<label for="valorFinanciado" class="form-label">Valor financiado</label>
-								<input type="text" class="form-control money" id="valorFinanciado" placeholder="R$ x.xxx,xx" required>
+								<input type="text" class="form-control money" id="valorFinanciado" name="valorFinanciado" placeholder="R$ x.xxx,xx" required>
 							</div>
 							<div class="col-md-6">
 								<label for="valorPrestacao" class="form-label">Valor da prestação</label>
-								<input type="text" class="form-control money" id="valorPrestacao" placeholder="R$ x.xxx,xx" required>
+								<input type="text" class="form-control money" id="valorPrestacao" name="valorPrestacao" placeholder="R$ x.xxx,xx" required>
 							</div>
 							<div class="col-md-6">
 								<label for="tipoContrato" class="form-label">Tipo do Contrato: </label>
-								<select id="tipoContrato" class="form-select" required>
+								<select id="tipoContrato" name="tipoContrato" class="form-select" required>
 									<option selected disabled>Selecione</option>
 									<option value="1">Imobiliário</option>
 									<option value="2">Veículo</option>
@@ -95,11 +95,11 @@
 							</div>
 							<div class="col-md-6">
 								<label for="quantParcelas" class="form-label">Quantidade de parcelas</label>
-								<input type="number" class="form-control number" id="quantParcelas" min="1" required>
+								<input type="number" class="form-control number" id="quantParcelas" name="quantParcelas" min="1" required>
 							</div>
 							<div class="col-md-6">
 								<label for="parcelasPagas" class="form-label">Quantidade de parcelas pagas</label>
-								<input type="number" class="form-control number" id="parcelasPagas" min="0" required>
+								<input type="number" class="form-control number" id="parcelasPagas" name="parcelasPagas" min="0" required>
 							</div>
 							<div class="col-md-6">
 								<fieldset>
@@ -107,27 +107,30 @@
 									<div class="row">
 										<div class="col-md-6">
 											<label for="Nome">Nome</label>
-											<input type="text" class="form-control" id="Nome" placeholder="Nome" required>
+											<input type="text" class="form-control" id="Nome" name="Nome" placeholder="Nome" required>
 										</div>
 										<div class="col-md-6">
 											<label for="Telefone">Telefone</label>
-											<input type="text" class="form-control phone" id="Telefone" placeholder="(99) 99999-9999" required>
+											<input type="text" class="form-control phone" id="Telefone" name="Telefone" placeholder="(99) 99999-9999" required>
 										</div>
 									</div>
-							</fieldset>
+								</fieldset>
+							</div>
 						</div>
-					</div>
-					<div class="row g-3 mt-4">
-						<div class="col-md-6 containerCalculadora">
-							<button type="reset" class="btn btn-clear w-100">Limpar campos</button>
+						<div class="row g-3 mt-4">
+							<div class="col-md-6 containerCalculadora">
+								<button type="reset" class="btn btn-clear w-100">Limpar campos</button>
+							</div>
+							<div class="col-md-6 containerCalculadora">
+								<button type="submit" class="btn btn-orange w-100 open-modal">Mostrar dados da dívida atual</button>
+							</div>
 						</div>
-						<div class="col-md-6 containerCalculadora">
-							<button type="submit" class="btn btn-orange w-100 open-modal">Mostrar dados da dívida atual</button>
-						</div>
-					</div>
-				</form>
-			</div>
-		</section>
+						<!-- Hidden email field for formSubmit -->
+						<input type="hidden" name="_subject" value="Novo formulário de calculadora online revisional">
+					</form>
+				</div>
+			</section>
+			
 			<!-- end calculator -->
 			
 			<section class="contact-services">
